Crea la ruta i fa la documentacio
